force-app/main/default/objects/Partner_Plan__c/Partner_Plan__c.object-meta.xml
<CustomObject>
    <label>Partner Plan</label>
    <nameField>
        <displayFormat>PP-{0000}</displayFormat>
        <label>Partner Plan Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Partner Plans</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>