force-app/main/default/objects/Partner_Plan__c/fields/Account_Plan__c.field-meta.xml
<CustomField>
    <fullName>Account_Plan__c</fullName>
    <label>Technical Account Plan</label>
    <type>Url</type>
</CustomField>