force-app/main/default/objects/Partner_Plan__c/fields/Ad_Hoc__c.field-meta.xml
<CustomField>
    <fullName>Ad_Hoc__c</fullName>
    <label>Ad-Hoc Technical Enablement</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>