force-app/main/default/objects/Partner_Plan__c/fields/Admin__c.field-meta.xml
<CustomField>
    <fullName>Admin__c</fullName>
    <label>Admin</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>