force-app/main/default/objects/Partner_Plan__c/fields/Cadence_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Cadence_Minutes__c</fullName>
    <label>Cadence Minutes</label>
    <type>Url</type>
</CustomField>