force-app/main/default/objects/Partner_Plan__c/fields/Design_Sprint__c.field-meta.xml
<CustomField>
    <fullName>Design_Sprint__c</fullName>
    <label>Design Sprint</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>