force-app/main/default/objects/Partner_Plan__c/fields/Design_Sprint_Done__c.field-meta.xml
<CustomField>
    <fullName>Design_Sprint_Done__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Design Sprint Done</label>
    <type>Checkbox</type>
</CustomField>