force-app/main/default/objects/Partner_Plan__c/fields/DP_Contract__c.field-meta.xml
<CustomField>
    <fullName>DP_Contract__c</fullName>
    <label>DP &amp; Contract</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>