force-app/main/default/objects/Partner_Plan__c/fields/DP_Contract_Done__c.field-meta.xml
<CustomField>
    <fullName>DP_Contract_Done__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DP &amp; Contract Done</label>
    <type>Checkbox</type>
</CustomField>