force-app/main/default/objects/Partner_Plan__c/fields/Has_a_DP_planned__c.field-meta.xml
<CustomField>
    <fullName>Has_a_DP_planned__c</fullName>
    <formula>IF(  Needs_DP_Contract__c , 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Has a DP planned</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>