force-app/main/default/objects/Partner_Plan__c/fields/has_SR_planned__c.field-meta.xml
<CustomField>
    <fullName>has_SR_planned__c</fullName>
    <description>technical field for Roll-up Summary</description>
    <formula>if (  Needs_SR__c , 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>has SR planned</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>