force-app/main/default/objects/Partner_Plan__c/fields/Investigation_Escalation__c.field-meta.xml
<CustomField>
    <fullName>Investigation_Escalation__c</fullName>
    <label>Investigation &amp; Escalation</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>