force-app/main/default/objects/Partner_Plan__c/fields/Needs_Design_Sprint__c.field-meta.xml
<CustomField>
    <fullName>Needs_Design_Sprint__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Design Sprint</inlineHelpText>
    <label>Design Sprint</label>
    <type>Checkbox</type>
</CustomField>