force-app/main/default/objects/Partner_Plan__c/fields/Needs_DP_Contract__c.field-meta.xml
<CustomField>
    <fullName>Needs_DP_Contract__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DP &amp; Contract</label>
    <type>Checkbox</type>
</CustomField>