force-app/main/default/objects/Partner_Plan__c/fields/Needs_Product_review__c.field-meta.xml
<CustomField>
    <fullName>Needs_Product_review__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Product review</label>
    <type>Checkbox</type>
</CustomField>