force-app/main/default/objects/Partner_Plan__c/fields/Needs_Selling_the_Platform__c.field-meta.xml
<CustomField>
    <fullName>Needs_Selling_the_Platform__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Selling the Platform</label>
    <type>Checkbox</type>
</CustomField>