force-app/main/default/objects/Partner_Plan__c/fields/Needs_SR__c.field-meta.xml
<CustomField>
    <fullName>Needs_SR__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SR</label>
    <type>Checkbox</type>
</CustomField>