force-app/main/default/objects/Partner_Plan__c/fields/Needs_TR__c.field-meta.xml
<CustomField>
    <fullName>Needs_TR__c</fullName>
    <defaultValue>false</defaultValue>
    <label>TR</label>
    <type>Checkbox</type>
</CustomField>