force-app/main/default/objects/Partner_Plan__c/fields/Needs_Workshop__c.field-meta.xml
<CustomField>
    <fullName>Needs_Workshop__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Workshop</label>
    <type>Checkbox</type>
</CustomField>