force-app/main/default/objects/Partner_Plan__c/fields/PAM__c.field-meta.xml
<CustomField>
    <fullName>PAM__c</fullName>
    <formula>TEXT( Account__r.PAM__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PAM</label>
    <type>Text</type>
</CustomField>