force-app/main/default/objects/Partner_Plan__c/fields/Partner_Type__c.field-meta.xml
<CustomField>
    <fullName>Partner_Type__c</fullName>
    <formula>TEXT( Account__r.Type )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Partner Type</label>
    <type>Text</type>
</CustomField>