force-app/main/default/objects/Partner_Plan__c/fields/PM_Activities__c.field-meta.xml
<CustomField>
    <fullName>PM_Activities__c</fullName>
    <label>PM Activities</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>