force-app/main/default/objects/Partner_Plan__c/fields/Priority__c.field-meta.xml
<CustomField>
    <fullName>Priority__c</fullName>
    <inlineHelpText>P2 are not considered by any calculation</inlineHelpText>
    <label>Priority</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>P1</fullName>
                <default>true</default>
                <label>P1</label>
            </value>
            <value>
                <fullName>P2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>