force-app/main/default/objects/Partner_Plan__c/fields/Product_review__c.field-meta.xml
<CustomField>
    <fullName>Product_review__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Product review</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>