force-app/main/default/objects/Partner_Plan__c/fields/Product_review_Done__c.field-meta.xml
<CustomField>
    <fullName>Product_review_Done__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Product review Done</label>
    <type>Checkbox</type>
</CustomField>