force-app/main/default/objects/Partner_Plan__c/fields/Quarterly_Plan__c.field-meta.xml
<CustomField>
    <fullName>Quarterly_Plan__c</fullName>
    <label>Quarterly Plan</label>
    <referenceTo>Quarterly_Plan__c</referenceTo>
    <relationshipLabel>Partner Plans</relationshipLabel>
    <relationshipName>Partner_Plans</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>