force-app/main/default/objects/Partner_Plan__c/fields/Security_Review__c.field-meta.xml
<CustomField>
    <fullName>Security_Review__c</fullName>
    <label>Security Review</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>