force-app/main/default/objects/Partner_Plan__c/fields/Selling_the_Platform__c.field-meta.xml
<CustomField>
    <fullName>Selling_the_Platform__c</fullName>
    <label>Selling the Platform</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>