force-app/main/default/objects/Partner_Plan__c/fields/Selling_the_Platform_Done__c.field-meta.xml
<CustomField>
    <fullName>Selling_the_Platform_Done__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Selling the Platform Done</label>
    <type>Checkbox</type>
</CustomField>