force-app/main/default/objects/Partner_Plan__c/fields/SR_Done__c.field-meta.xml
<CustomField>
    <fullName>SR_Done__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SR Done</label>
    <type>Checkbox</type>
</CustomField>