force-app/main/default/objects/Partner_Plan__c/fields/to_Delete__c.field-meta.xml
<CustomField>
    <fullName>to_Delete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>to Delete</label>
    <type>Checkbox</type>
</CustomField>