force-app/main/default/objects/Partner_Plan__c/fields/Total_Time__c.field-meta.xml
<CustomField>
    <fullName>Total_Time__c</fullName>
    <formula>Ad_Hoc__c + Admin__c + Design_Sprint__c + DP_Contract__c + Investigation_Escalation__c +  PM_Activities__c + Security_Review__c + Selling_the_Platform__c + TR__c + Workshop__c +
 Product_review__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>