force-app/main/default/objects/Partner_Plan__c/fields/TR__c.field-meta.xml
<CustomField>
    <fullName>TR__c</fullName>
    <label>TR</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>