force-app/main/default/objects/Partner_Plan__c/fields/TR_Done__c.field-meta.xml
<CustomField>
    <fullName>TR_Done__c</fullName>
    <defaultValue>false</defaultValue>
    <label>TR Done</label>
    <type>Checkbox</type>
</CustomField>