force-app/main/default/objects/Partner_Plan__c/fields/Workshop__c.field-meta.xml
<CustomField>
    <fullName>Workshop__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Workshop</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>