force-app/main/default/objects/Partner_Plan__c/fields/Workshop_Done__c.field-meta.xml
<CustomField>
    <fullName>Workshop_Done__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Workshop Done</label>
    <type>Checkbox</type>
</CustomField>